[gd_scene load_steps=21 format=3 uid="uid://b0ku54yf6r35v"]

[ext_resource type="Script" path="res://Battle/battle.gd" id="1_3apam"]
[ext_resource type="Texture2D" uid="uid://spw7tfh0ix32" path="res://art/obstaclecourse.png" id="1_dgmre"]
[ext_resource type="Texture2D" uid="uid://bp8v8iijbblyw" path="res://art/submarinefinal (1).png" id="3_f1ekf"]
[ext_resource type="Texture2D" uid="uid://uqqp56yvymw1" path="res://art/trashmonsternew.png" id="3_gcqk1"]
[ext_resource type="Texture2D" uid="uid://kdg4nohxv5oh" path="res://art/empty.png" id="4_hrf17"]
[ext_resource type="Script" path="res://Battle/PlayerDamage.gd" id="5_2cuwd"]
[ext_resource type="FontFile" uid="uid://d0nxybs2njrei" path="res://art/Adigiana Ultra.ttf" id="5_u37l1"]
[ext_resource type="PackedScene" uid="uid://dacp4gog88m2b" path="res://home_button.tscn" id="8_ak0eo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kd8mi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gcqk1")
}, {
"duration": 1.0,
"texture": ExtResource("4_hrf17")
}],
"loop": true,
"name": &"damage",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwa6k"]
bg_color = Color(0.878431, 0, 0.00392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hx06f"]
bg_color = Color(0.266667, 0.490196, 0.211765, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_bxxht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_f1ekf")
}, {
"duration": 1.0,
"texture": ExtResource("4_hrf17")
}],
"loop": true,
"name": &"damage",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6tehh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfef8"]
bg_color = Color(0.0862745, 0.356863, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwxo3"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkr4t"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2hyu"]
bg_color = Color(0.34902, 0.34902, 0.34902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_botqe"]
length = 0.001

[sub_resource type="Animation" id="Animation_d6nss"]
resource_name = "enemy_damaged"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33m1b"]
_data = {
"RESET": SubResource("Animation_botqe"),
"enemy_damaged": SubResource("Animation_d6nss")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3apam")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1409.0
offset_bottom = 999.0
texture = ExtResource("1_dgmre")
expand_mode = 1
stretch_mode = 3

[node name="TrashContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 843.0
offset_top = 103.0
offset_right = 1233.0
offset_bottom = 469.0

[node name="TrashMonster" type="AnimatedSprite2D" parent="TrashContainer"]
position = Vector2(136, 271)
scale = Vector2(0.6, 0.625)
sprite_frames = SubResource("SpriteFrames_kd8mi")
animation = &"damage"

[node name="ProgressBar" type="ProgressBar" parent="TrashContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_pwa6k")
theme_override_styles/fill = SubResource("StyleBoxFlat_hx06f")
max_value = 50.0
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="TrashContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 20
text = "HP: 25/50"

[node name="PlayerContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 277.0
offset_right = 371.0
offset_bottom = 620.0

[node name="Player" type="AnimatedSprite2D" parent="PlayerContainer"]
position = Vector2(169, 240)
scale = Vector2(0.3, 0.313)
sprite_frames = SubResource("SpriteFrames_bxxht")
animation = &"damage"
metadata/_edit_lock_ = true

[node name="ProgressBar" type="ProgressBar" parent="PlayerContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_styles/background = SubResource("StyleBoxFlat_pwa6k")
theme_override_styles/fill = SubResource("StyleBoxFlat_hx06f")
max_value = 50.0
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 20
text = "HP: 25/50"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_top = 873.0
offset_right = 1400.0
offset_bottom = 1002.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6tehh")

[node name="Actions" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Recycle" type="Button" parent="Panel/Actions"]
custom_minimum_size = Vector2(450, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_vfef8")
theme_override_styles/hover = SubResource("StyleBoxFlat_gwxo3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gwxo3")
theme_override_styles/focus = SubResource("StyleBoxFlat_gwxo3")
text = "Recycle"

[node name="Reuse" type="Button" parent="Panel/Actions"]
custom_minimum_size = Vector2(450, 0)
layout_direction = 2
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_vfef8")
theme_override_styles/hover = SubResource("StyleBoxFlat_gwxo3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gwxo3")
theme_override_styles/focus = SubResource("StyleBoxFlat_gwxo3")
text = "Reuse"

[node name="Cleanup" type="Button" parent="Panel/Actions"]
custom_minimum_size = Vector2(450, 0)
layout_direction = 2
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_vfef8")
theme_override_styles/hover = SubResource("StyleBoxFlat_gwxo3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gwxo3")
theme_override_styles/focus = SubResource("StyleBoxFlat_gwxo3")
text = "Clean Up"

[node name="EnemyDamage" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1198.0
offset_top = 47.0
offset_right = 1291.0
offset_bottom = 121.0
theme_override_colors/default_color = Color(0.878431, 0, 0.00392157, 1)
theme_override_fonts/normal_font = ExtResource("5_u37l1")
theme_override_font_sizes/normal_font_size = 50
text = "-5"
script = ExtResource("5_2cuwd")

[node name="PlayerDamage" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 218.0
offset_right = 425.0
offset_bottom = 292.0
theme_override_colors/default_color = Color(0.878431, 0, 0.00392157, 1)
theme_override_fonts/normal_font = ExtResource("5_u37l1")
theme_override_font_sizes/normal_font_size = 50
text = "-5"
script = ExtResource("5_2cuwd")

[node name="Trivia" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(900, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rkr4t")

[node name="Question" type="Label" parent="Trivia"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -440.0
offset_right = 440.0
offset_bottom = 270.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 50
text = "How many blah blah blah"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Options" type="VBoxContainer" parent="Trivia"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -435.0
offset_right = 292.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30

[node name="Option1" type="Button" parent="Trivia/Options"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_t2hyu")
text = "Option 1"

[node name="Option2" type="Button" parent="Trivia/Options"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_t2hyu")
text = "Option 1"

[node name="Option3" type="Button" parent="Trivia/Options"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_u37l1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_t2hyu")
text = "Option 1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_33m1b")
}

[node name="TryNewMove" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 508.0
offset_top = 753.0
offset_right = 897.0
offset_bottom = 808.0
theme_override_colors/default_color = Color(0.407843, 0.356863, 0.341176, 1)
theme_override_fonts/normal_font = ExtResource("5_u37l1")
theme_override_font_sizes/normal_font_size = 50
text = "Try a different move"
script = ExtResource("5_2cuwd")

[node name="homeButton" parent="." instance=ExtResource("8_ak0eo")]
layout_mode = 0

[connection signal="pressed" from="Panel/Actions/Recycle" to="." method="attack" binds= ["recycle"]]
[connection signal="pressed" from="Panel/Actions/Reuse" to="." method="attack" binds= ["reuse"]]
[connection signal="pressed" from="Panel/Actions/Cleanup" to="." method="attack" binds= ["clean_up"]]
